force-app/main/default/objects/Favorite__c/Favorite__c.object-meta.xml
<CustomObject>
    <label>Favorite</label>
    <nameField>
        <label>Favourite Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Favorites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>