force-app/main/default/objects/Favorite__c/fields/aa__c.field-meta.xml
<CustomField>
    <fullName>aa__c</fullName>
    <defaultValue>false</defaultValue>
    <label>aa</label>
    <type>Checkbox</type>
</CustomField>