force-app/main/default/objects/Favorite__c/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <displayFormat>an-{000}</displayFormat>
    <externalId>true</externalId>
    <label>test autonum</label>
    <type>AutoNumber</type>
</CustomField>