force-app/main/default/objects/Favorite__c/fields/test_exter_id__c.field-meta.xml
<CustomField>
    <fullName>test_exter_id__c</fullName>
    <externalId>true</externalId>
    <label>test num exter id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>